--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>ArvoElect | Industry-Ready Electrical Training</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
