--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ArvoElect | Industry-Ready Electrical Training</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href=https://docs.google.com/forms/d/e/1FAIpQLSeLO50LDlYMOKNjILQCKbSeTGX5DWn-kEPvcv_b0lApC7Y_cA/viewform?usp=sharing&ouid=115605741489381627357>
 </head>
 <body>
 
