--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- HEADER -->
     <header class="header">
         <div class="container header-container">
-            <div class="logo">
-                <a href="#hero"><img src="logo.png" alt="ArvoElect Logo" class="logo-img"></a>
+           <div class="logo">
+  <img src="logo.png" alt="ArvoElect Logo" class="logo-img">
+</div>
             </div>
 
             <nav class="nav" id="navMenu">
